fix: select overlap and poppins font

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,6 +1,6 @@
 body {
     background-color: aliceblue;
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins',Arial, sans-serif;
   }
   h1 {
     font-size: 24px;
